In video preferences you have a video crop field, which I set to 16:9 to crop old TV formats to fit my screen. The crop setting applies on the first video played, but after it plays the rest in 4:3... and when I press 'C', it cycles next to 'default', then 16:10, and 16:9. Whenever I set it back to 16:9, it forgets this on the next file, despite my settings.
Arch Linux (-syu'ed as of 21-feb-12)
Edited
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Child items
0
No child items are currently assigned. Use child items to break down this issue into smaller parts.
Linked items
0
Link issues together to show that they're related.
Learn more.
Still happenning here. It seems quite random. Obviously it only happens to videos in original 4:3. Whenever i click it displays my video in either 16:9, 16:10, or 4:3, but crop is still set to 'default' according to OSD which should 16:9.
I can confirm this problem. I am also waiting quite some time for this to be fixed. I also enterd "16:9" into the "Aspect Ratio" Fiel in the settings. But when playing a larger playlist the setting doesn't apply. I also noticed, that the list of choosable aspect ratios contains a second "16:9" entry after I put it into the settings.
Note that I did not use the wrong field. The "Custom Aspect Ratio" field was empty. After I noticed that, I even tried to switch the field entries because I thought they might had accidently been mixed during the 2.0 update. But I had no effect.
Crop setting is lost when the video format changes. This is kinda expected... Otherwise, I cannot reproduce the problem.
I guess it's due to a race when recycling or not recycling an existing video output. Unfortunately, this is based on heuristics and intrinsically prone to race.
Patch welcome.
Rémi Denis-Courmontchanged title from Advanced Settings: Video: Video Cropping -- setting only applies to 1st file on playlist to 2.0 regression: cropping setting only applies to 1st file on playlist
changed title from Advanced Settings: Video: Video Cropping -- setting only applies to 1st file on playlist to 2.0 regression: cropping setting only applies to 1st file on playlist