vout: trigger callbacks also when reinitializing (fixes #6181)

The values and choices of video output variables are still all there.
But we need to resend the control request to video output thread
so that they apply to the new video output display.